# csv-navigator

./: .gitignore  Cargo.toml  GPUI_POC.md  LICENSE  README.md  build.rs  build.sh  deny.toml  run.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  lint.yml
benches/: large_dataset.rs
docs/: DEVELOPMENT.md  REMAINING_TASKS.md
src/: app.rs  data.rs  lib.rs  main.rs  ui.rs
src/views/: csv_table_view.rs  main_view.rs  mod.rs
tests/: app_infrastructure_test.rs  excel_integration_test.rs  ui_integration_test.rs  workflow_integration_test.rs
ui/: csv_navigator.slint  main.slint
