[package]
name = "csv-navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.169.3" }
anyhow = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "csv-navigator"
path = "src/main.rs"
