[package]
name = "csv-navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.11.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
calamine = "0.20"
rust_xlsxwriter = "0.65"

[build-dependencies]
slint-build = "1.11.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "csv-navigator"
path = "src/main.rs"
